V1.3 (#149)
**Minor Changes**
* Viewself uses ReadOnlyPerson instead of Person, HelpCommand uses Optional attachedMessage
* Removed use of Optional as an attribute in Privilege
* Removed setSavefile of LogicTest, called in CommandAssertion
* Made regex of Parser private
* Added icon
* updated VERSION to 1.3, added ASCII art
* Made ListCommand show only names
* Fixed files not checking validity of AB at startup
* Extracted ListFormat enum from Formatter
* Extracted ListType, MessageType enum from CommandResult
* View/Viewall displays on output
* Added ListAccount Command
* Added ListAll command
* Made PrepChangepw into TwoArgs Command
* RaisePrivilege now uses KeyWords Format

**Major Changes**
* Organized commands into packages
* Organized details into packages
* Made SingleIndexCommands call generic prepare  function under Parser, **future single index command should call this prepare function instead of having its own prepare function**
* Created PrepareVoidCommand,  **future void command should call this prepare function instead of creating it directly to catch for trailing garbage arguments**
* Major overhaul to CommandResult, now accepts a generic List with a enum to determine what type of list it is
* Allow passing of Format Type for CommandResult(PersonList)
* Made a Pair class (under Utils)
** Refactored StorageFileTest, FormatterTest to use List<Pair> instead of HashMap to preserve order of test cases
* Delete/Add/AddAcc/ DelAcc now reshows the list of person